templates/help-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: help-ingress
  namespace: vectoratlas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # This removes "/help" from the URL
spec:
  rules:
  - http:
      paths:
        - path: /help(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: help   # This matches the Service name
              port:
                number: 80
